--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,16 @@
 services:
 
-  # db:
-  #   image: mysql:5.7
-  #   container_name: db
-  #   volumes:
-  #     - ./mysql:/var/lib/mysql
-  #   environment:
-  #     - MYSQL_DATABASE=nodedb
-  #     - MYSQL_ROOT_PASSWORD=root
-  #     - MYSQL_ROOT_USER=root
-  #   networks: 
-  #     - node-network
+  db:
+    image: mysql:5.7
+    container_name: db
+    volumes:
+      - ./mysql:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=nodedb
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ROOT_USER=root
+    networks: 
+      - node-network
       
   server:
     image: server
