--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,21 +2,19 @@ events {
     worker_connections 1024;
 }
 
-#The Nginx server instance
 http {
     server {
-    listen 0.0.0.0:80;
-    server_name localhost;
+        listen 0.0.0.0:80;
+        server_name localhost;
 
-    location / {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass http://127.0.0.1:3000/;
-        proxy_http_version 1.1;
-
-    #   proxy_redirect off;
+        location / {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_pass http://server:3000/;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
-}
 }
