set up dockerize to wait for db before starting the server

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       context: ./server
       dockerfile: Dockerfile
     container_name: server
-    
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 60s docker-entrypoint.sh
     volumes:
       - ./server:/usr/src/app
     command: sh -c "npm install && npm start"
